apps/kube-prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-grafana
  namespace: kube-prometheus
spec:
  rules:
  - host: grafana.skynet.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-grafana
            port:
              number: 80           
  ingressClassName: nginx
